[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A rule engine implementation in Rust"

[dependencies]
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 通用工具
uuid = { version = "1.12.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.86"


# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP 服务器
axum = { version = "0.8.1", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }


# 本地依赖
rule_rs = { path = "../../rule_rs" }
